# projetcpp2526-s2-2a14-digital-workshop

./: BerusGestion.pro  CMakeLists.txt  GestionCollaborative.pro  README.md  ajout.txt  base donne.sql  client.cpp  client.h  commandeservice.cpp  commandeservice.h  connection.cpp  connection.h  debug_cmd.txt  emailjsservice.cpp  emailjsservice.h  interfaceG.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  materiel.cpp  materiel.h  materiel_oracle.h.cpp  materiel_oracle.h.h  matrelle.sql  matriele.cpp  matriele.h  matriele.ui  modification.txt  qrcodegen.cpp  supression.txt  userwindow.cpp  userwindow.h
ardouino/: ardouino.cpp  ardouino.h  ardouino.ino
client/: chatbot.h  client.h  connection.cpp  connection.h  main.cpp  mainwindow.h
clients/: Chatwidget.cpp  Chatwidget.h  chatbot.cpp  chatbot.h  client.cpp  client.h  clientwindow.cpp  clientwindow.h
commande/: arduino_commande.cpp  arduino_commande.h  commande.cpp  commande.h  commandewindow.cpp  commandewindow.h  commandewindow.ui  historique.txt  twiliomanager.cpp
commandes/: commande.cpp  commande.h  commandewindow.cpp  commandewindow.h  commandewindow.ui
connection/: connection.h
copie executable/interfaceG/: Chatwidget.cpp  arduino.cpp  arduino.h  mainwindow.cpp  mainwindow.h  userwindow.cpp  userwindow.h
interfaceG/: .gitignore  Chatwidget.cpp  Chatwidget.h  chatbot.cpp  client.cpp  client.h  emailsender.cpp  interfaceG.pro  mainwindow.cpp  mainwindow.h  ressources.qrc
matriel/: matrelle.sql  matriele.cpp  matriele.h  matriele.ui  qrcodegen.hpp
projet c/gestion-materiel/interfaceG/: mainwindow.cpp  mainwindow.h
projet c/gestion-utilisateurs/: CMakeLists.txt  main.cpp
tacheclient/: chatbot.cpp  client.cpp  emailsender.h  interfaceG.pro  rfid_sketch.ino
utulisateur/: loginwindow.cpp  userwindow.cpp  userwindow.h
